
2008-03-26  Lynn Garren

	* HepMC/MomentumUnits.h: new class to encapsulate momentum units,
	  which are represented by a single enum
	* HepMC/PositionUnits.h: new class to encapsulate position units,
	  which are represented by a single enum
	* GenEvent: add MomentumUnits and PositionUnits data members and
	  associated methods
	* GenVertex: add protected convert_position method
	* GenParticle: add protected convert_momentum method

	* HepMC/PdfInfo.h: add pdf_id1(), pdf_id2(), set_pdf_id1(), and
	  set_pdf_id2() for the pdf set id numbers
	
	* IO_GenEvent: get and put unit information in a new line 
	  The first character of the unit line is "U".
	* IO_GenEvent: process the new PdfInfo data members
	
	* test/testUnits.cc: new test for MomentumUnits and PositionUnits
	
  --------------------------  HepMC-2.03.06  --------------------------

2008-03-12  Lynn Garren
	
	* test: reduce size of input files
	
	* IO_HEPEVT: add trust_beam_particles and set_trust_beam_particles
	  methods so the user can specify that no beam particles are available.
	  This fixes a problem with pythia6 input when the user chooses "none".

2008-03-11  Lynn Garren

	* src/GenEvent.cc: The GenVertex pointer to the parent event was 
	  not properly moved when the operator= method was used to copy
	  a GenEvent.  That bug is now fixed.
	* GenVertex: added protected change_parent_event_ method for swap 
	  as part of bug fix.
	* test/testMultipleCopies.cc.in: Add explicit tests for operator=
	  and swap.
	  
	* examples: minor tweaks for readability

  --------------------------  HepMC-2.03.05  --------------------------

2008-02-22  Lynn Garren

	* fio/IO_HEPEVT.cc:  According to standard HepMC design, all vertices 
	in an event are expected to contain particles.  If, for instance, the
	first two particles have no parents, then they should simply not have 
	a production vertex.  However, in at least one instance empty production